# BladeOfGrass-mower

./: .gitignore  CMakeLists.txt  README.md  TIMELINE.md  partitions.csv  platformio.ini  sdkconfig.esp32-s3-yd-wroom  sdkconfig.esp32-s3-yd-wroom.old
components/wifi_connect/: wifi_connect.c  wifi_connect.h
include/: board_config.h  config_board.h
lib/button/: button.c  button.c.old  button.h
lib/led/: led.c  led.h
lib/motor_drive/: motor_drive.c  motor_drive.h
lib/motors_drive/: motors_drive.c
lib/nmea/: nmea.c  nmea.h
lib/pushBtn/: pushBtn.c  pushBtn.h
lib/server/: server.c  server.h
lib/system/: system.c  system.h
lib/thingsboard/: thingsboard.c  thingsboard.h
lib/uart_um980/: uart_um980.c  uart_um980.h
lib/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
lib/wifi_led/: wifi_led.c  wifi_led.h
lib/wifi_monitor/: wifi_monitor.c  wifi_monitor.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
main/communication/: server.c  server.h
main/motors/: motor_drive.c  motor_drive.h
main/peripherals/: pushBtn.c  pushBtn.h  toggleLed.c  toggleLed.h
site/: package-lock.json  package.json  vite.config.ts
site/src/: App.css  App.tsx
src/: CMakeLists.txt  main.c  main.h  wifi_credentials.h
test/: test_app.c
